# bible-in-a-year

./: README.md  biy.bash  pyproject.toml
bible_in_a_year/: biy_book.py  biy_datafile.py  biy_mp3.py  biy_paths.py  biy_segment.py  biy_update.py  biy_utils.py  biy_utils_book.py  cli.py  msg.py  show.py  utils.py
data/: bible-in-year-fr-mike.xlsx
